# transversal-memory

./: .gitignore  CLAUDE.md  COPUNCTAL_FIX.md  IDEAS.md  Makefile  README.md  TRIADIC_GRAM_MEMORY.md  arc_bend_bench.bend  arc_bend_solve.bend  arc_bend_vec.bend  arc_solver.c  arc_sup_test.hvm  arc_tables.c  arc_tables_wrapper.py  associative_db.py  evaluate.py  exp_arc_bp_solve.py  exp_arc_bp_then_score.py  exp_arc_chain_solve.py  exp_arc_cooccur.py  exp_arc_cv_test.py  exp_arc_fast_hist.py  exp_arc_fast_solve.py  exp_arc_gen_solve.py  exp_arc_gram_hist_solve.py  exp_arc_hist_solve.py  exp_arc_ic_solve.py  exp_arc_local.py  exp_arc_mps_bench.py  exp_arc_multi_emb_solve.py  exp_arc_multiseed_test.py  exp_arc_plucker_solve.py  exp_arc_real.py  exp_arc_rowcol_test.py  exp_arc_seed_sweep.py  exp_arc_transversal.py  exp_assoc_mem.py  exp_bridge_gram.py  exp_fast.py  exp_fewshot_relational.py  (+28 more)
examples/: associative_db_demo.py  associative_generation.py  basic_geometry.py  capital_cities.py  cas_benchmark.py  cas_demo.py  cooccurrence_demo.py  debug_generative.py  fix_generative.py  full_dataset_demo.py  higher_grassmannian_demo.py  multi_transversal_generation.py  sequential_prediction.py  sequential_prediction_multiseed.py  word_associations.py  word_associations_multiseed.py
results/: 00d62c1b.txt  025d127b.txt  05269061.txt  05f2a901.txt  08ed6ac7.txt  09629e4f.txt  0962bcdd.txt  0a938d79.txt  0ca9ddb6.txt  0d3d703e.txt  11852cab.txt  150deff5.txt  178fcbfb.txt  1b60fb0c.txt  1bfc4729.txt  1caeab9d.txt  1e0a9b12.txt  1f0c79e5.txt  1f876c06.txt  22168020.txt  22233c11.txt  (+171 more)
(+168 files in other folders)
