[project]
name = "transversal-memory"
version = "0.1.0"
description = "Content-addressable memory via projective geometry and Schubert calculus"
requires-python = ">=3.9,<3.13"
dependencies = [
    "numpy>=1.24",
    "pyarrow>=21.0.0",
    "scipy>=1.10",
    "tiktoken>=0.12.0",
    "torch>=2.0.0",
]

[tool.uv.sources]
torch = { index = "pytorch-rocm" }

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.2.4"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
