[project]
name = "transversal-memory"
version = "0.1.0"
description = "Content-addressable memory via projective geometry and Schubert calculus"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pyarrow>=21.0.0",
    "scipy>=1.10",
    "tiktoken>=0.12.0",
    "torch>=2.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
